--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mysql2": "^3.11.0",
     "express": "^4.19.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
