--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,7 @@
   # 1. Forcer le type MIME pour les modules JavaScript
   AddType application/javascript .js
   AddType application/javascript .mjs
+  AddType application/json .json
 
   # 2. Proxy vers Node.js pour toutes les requêtes /api
   # Assurez-vous que votre server.js écoute bien sur le port 3000
