--- a/.htaccess
+++ b/.htaccess
@@ -1,20 +1,22 @@
 <IfModule mod_rewrite.c>
   RewriteEngine On
   
-  # 1. Forcer le type MIME pour les modules JavaScript
-#  AddType application/javascript .js
-#  AddType application/javascript .mjs
+  # A. Forcer le JSON pour les réponses de l'API
   AddType application/json .json
 
-  # 2. Proxy vers Node.js pour toutes les requêtes /api
+  # B. PROXY API (Doit être AVANT le routage React)
+  # On vérifie que la requête commence bien par /api
   RewriteCond %{REQUEST_URI} ^/api [NC]
-  RewriteRule ^api/(.*) http://localhost:443/api/$1 [P,L]
+  # On envoie vers le port interne de Node.js (3000 par défaut)
+  RewriteRule ^api/(.*) http://127.0.0.1:3000/api/$1 [P,L]
 
-  # 3. Gestion du routage React (Single Page App)
+  # C. ROUTAGE REACT (Gestion des Single Page Apps)
   RewriteBase /
   RewriteRule ^index\.html$ - [L]
   
-  # Si le fichier ou le dossier demandé n'existe pas, on renvoie vers index.html
+  # Si ce n'est pas un fichier réel (-f) ni un dossier réel (-d)
+  # Et que ce n'est PAS une requête /api (sécurité supplémentaire)
+  RewriteCond %{REQUEST_URI} !^/api [NC]
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule . /index.html [L]
