--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,12 @@
   # B. PROXY API (Doit être AVANT le routage React)
   # On vérifie que la requête commence bien par /api
   RewriteCond %{REQUEST_URI} ^/api [NC]
-  RewriteRule ^api/(.*) http://127.0.0.1:3000/api/$1 [P,L]
+  RewriteRule ^api/(.*)$ http://127.0.0.1:3000/api/$1 [P,L]
+
+  # --- BB. GESTION DU HTTPS ---
+  # Force la connexion sécurisée si ce n'est pas déjà le cas
+  RewriteCond %{HTTPS} off
+  RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
   # C. ROUTAGE REACT (Gestion des Single Page Apps)
   RewriteBase /
